# robot_project

./: LICENSE  basic_planner.py  ble_test.py  drive_and_track.py  mecanum_kinematics.py  odometry_tracker.py  quick_raw_imu_test.py  robot_ble_client.py  test_basic_waypoints.py  test_drive_and_track.py  test_eth.py  test_position_estimator.py  velocity_controller.py
Hardware/arduino_code/RobotControl/: BluetoothComms.cpp  BluetoothComms.h  EncoderReader.h  MessageHandler.h  (+2 more)
Hardware/esp32_passthrough/: esp32_passthrough.ino
arduino_code/: BluetoothComms.h  EncoderReader.cpp  MotorController.cpp  MotorController.h
arduino_code/RobotControl/: BluetoothComms.cpp  EncoderReader.cpp  EncoderReader.h  EthernetComms.cpp  EthernetComms.h  MessageHandler.cpp  MotionController.cpp  MotionController.h  MotorController.cpp  MotorPIDController.cpp  MotorPIDController.h  RobotControl.ino
esp32_passthrough/esp32_passthrough_attempt2_copy_20250625222733/: esp32_passthrough_attempt2_copy_20250625222733.ino
fusion/: gnss_receiver.py  imu_raw.py  position_estimator.py  test_gnss.py  test_position_estimator.py
imu/: adxl345_sensor.py  calibrate_all.py  calibration.py  calibration_manager.py  camera_test.py  gps_check.py  hmc5843_sensor.py  hmc5883l_sensor.py  i2c_sensor.py  imu.py  imu_madgwick.py  imu_magwick.py  itg3200_sensor.py  lidar_check.py  main.py  plot_3d_position.py  plotter.py  plotter3d.py  velocity_ekf.py
scripts/: basic_motion_planner.py  bt_comms_test.py  quick_raw_imu_test.py  test_eth.py  test_position_estimator.py
scripts/robot_nodes/: package.xml  setup.py
(+12 files in other folders)
